<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="viewmodel" type="com.zhuorui.securities.personal.ui.viewmodel.SettingPswViewModel"/>
    </data>
    <RelativeLayout android:background="@color/color_f0f0f0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
        <ImageView android:layout_width="12dp"
                   android:layout_height="21dp"
                   android:layout_marginLeft="30dp"
                   android:id="@+id/iv_back"
                   android:layout_alignParentLeft="true"
                   android:background="@mipmap/btn_back"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/setting_psw"
                  android:layout_below="@+id/iv_back"
                  android:id="@+id/tv_tips"
                  android:layout_marginTop="40dp"
                  android:layout_marginLeft="30dp"
                  android:textColor="@color/color_232323"
                  android:textStyle="bold"
                  android:textSize="25sp"/>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="40dp"
                      android:layout_marginLeft="30dp"
                      android:layout_marginRight="30dp"
                      android:id="@+id/ll_login"
                      android:layout_below="@+id/tv_tips"
                      android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="16sp"
                      android:textStyle="bold"
                      android:textColor="@color/color_232323"
                      android:text="@string/login_psw"/>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_marginLeft="9dp">
                <RelativeLayout android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                    <EditText android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:id="@+id/et_login_psw"
                              android:layout_toLeftOf="@+id/cb_login_psw"
                              android:textSize="15sp"
                              android:textColorHint="@color/color_A1A1A1"
                              android:textCursorDrawable="@drawable/bg_edittext"
                              android:hint="@string/psw_conbine"
                              android:maxLength="20"
                              android:inputType="textPassword"
                              android:textStyle="bold"
                              android:textColor="@color/color_232323"
                              android:background="@null"/>
                    <CheckBox android:layout_width="17dp"
                              android:layout_height="9dp"
                              android:id="@+id/cb_login_psw"
                              android:button="@null"
                              android:layout_alignParentRight="true"
                              android:background="@drawable/psw_check"/>
                </RelativeLayout>
                <ImageView android:layout_width="match_parent"
                           android:layout_height="1dp"
                           android:layout_alignParentBottom="true"
                           android:background="@color/color_A1A1A1"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="30dp"
                      android:layout_marginLeft="30dp"
                      android:layout_marginRight="30dp"
                      android:id="@+id/ll_ensure_login"
                      android:layout_below="@+id/ll_login"
                      android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="16sp"
                      android:textStyle="bold"
                      android:textColor="@color/color_232323"
                      android:text="@string/ensure_psw"/>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_marginLeft="9dp">
                <RelativeLayout android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                    <EditText android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:id="@+id/et_ensure_psw"
                              android:layout_toLeftOf="@+id/cb_ensure_psw"
                              android:textCursorDrawable="@drawable/bg_edittext"
                              android:textSize="15sp"
                              android:textStyle="bold"
                              android:textColorHint="@color/color_A1A1A1"
                              android:hint="@string/ensure_psw_again"
                              android:maxLength="20"
                              android:inputType="textPassword"
                              android:textColor="@color/color_232323"
                              android:background="@null"/>
                    <CheckBox android:layout_width="17dp"
                              android:layout_height="9dp"
                              android:id="@+id/cb_ensure_psw"
                              android:button="@null"
                              android:layout_alignParentRight="true"
                              android:background="@drawable/psw_check"/>
                </RelativeLayout>
                <ImageView android:layout_width="match_parent"
                           android:layout_height="1dp"
                           android:layout_alignParentBottom="true"
                           android:background="@color/color_A1A1A1"/>
            </LinearLayout>
        </LinearLayout>
        <Button android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="29dp"
                android:layout_marginRight="29dp"
                android:layout_marginTop="41dp"
                android:layout_below="@+id/ll_ensure_login"
                android:textSize="23sp"
                android:textStyle="bold"
                android:id="@+id/tv_btn_finish"
                android:textColor="@color/color_FFFFFFFF"
                android:text="@string/complete"
                android:background="@drawable/login_btn_unchecked"/>
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:layout_alignParentBottom="true"
                      android:layout_marginBottom="22dp"
                      android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentBottom="true"
                      android:textColor="@color/color_000000"
                      android:textSize="11sp"
                      android:text="@string/login_tips1"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentBottom="true"
                      android:textSize="11sp"
                      android:textColor="@color/color_1A6ED2"
                      android:text="@string/login_tips2"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentBottom="true"
                      android:textSize="11sp"
                      android:textColor="@color/color_000000"
                      android:text="@string/login_tips3"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentBottom="true"
                      android:textSize="11sp"
                      android:textColor="@color/color_1A6ED2"
                      android:text="@string/login_tips4"/>
        </LinearLayout>
    </RelativeLayout>
</layout>