<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
   <data>
     <variable name="viewmodel"
               type="com.zhuorui.securities.personal.ui.viewmodel.LoginPswViewModel"/>
   </data>
  <RelativeLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">
    <ImageView android:layout_width="20dp"
               android:layout_height="20dp"
               android:id="@+id/iv_cancle"
               android:layout_marginLeft="30dp"
               android:background="@mipmap/delete"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/iv_cancle"
              android:id="@+id/tv_login"
              android:layout_marginLeft="30dp"
              android:layout_marginTop="40dp"
              android:textColor="@color/color_232323"
              android:textStyle="bold"
              android:textSize="25sp"
              android:text="@string/login"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/ll_country_disct"
                  android:layout_below="@+id/tv_login"
                  android:orientation="vertical"
                  android:layout_marginTop="40dp"
                  android:layout_marginRight="30dp"
                  android:layout_marginLeft="30dp">
      <RelativeLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:id="@+id/tv_area_tips"
                  android:textStyle="bold"
                  android:layout_alignParentLeft="true"
                  android:textColor="@color/color_232323"
                  android:text="@string/area"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:background="@null"
                  android:layout_marginLeft="25dp"
                  android:textSize="16sp"
                  android:id="@+id/tv_contry"
                  android:textStyle="bold"
                  android:textColor="@color/color_282828"
                  android:text="@{viewmodel.strdisct}"
                  android:layout_toLeftOf="@+id/iv_more_arrows"
                  android:layout_toRightOf="@+id/tv_area_tips"/>
        <ImageView android:layout_width="10dp"
                   android:layout_height="15dp"
                   android:layout_alignParentRight="true"
                   android:id="@+id/iv_more_arrows"
                   android:background="@mipmap/more_arrows"/>
      </RelativeLayout>
      <ImageView android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="15dp"
                 android:background="@color/color_A1A1A1"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:id="@+id/ll_phone_num"
                  android:layout_below="@+id/ll_country_disct"
                  android:layout_marginTop="15dp"
                  android:layout_marginRight="30dp"
                  android:layout_marginLeft="30dp">
      <RelativeLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:id="@+id/tv_areaphone_tips"
                  android:textStyle="bold"
                  android:layout_alignParentLeft="true"
                  android:textColor="@color/color_232323"
                  android:text="@{viewmodel.code}"/>
        <EditText android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/et_phone"
                  android:background="@null"
                  android:layout_marginLeft="68dp"
                  android:textCursorDrawable="@drawable/bg_edittext"
                  android:hint="@string/input_phone_num"
                  android:inputType="number"
                  android:textColorHint="@color/color_A1A1A1"
                  android:textStyle="bold"
                  android:textSize="16sp"
                  android:textColor="@color/color_282828"
                  android:layout_toRightOf="@+id/tv_areaphone_tips"/>
      </RelativeLayout>
      <ImageView android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="15dp"
                 android:background="@color/color_A1A1A1"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_below="@+id/ll_phone_num"
                  android:id="@+id/ll_password"
                  android:layout_marginTop="15dp"
                  android:layout_marginRight="30dp"
                  android:layout_marginLeft="30dp">
      <RelativeLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:id="@+id/tv_verificationCode"
                  android:textStyle="bold"
                  android:layout_alignParentLeft="true"
                  android:textColor="@color/color_232323"
                  android:text="@string/password"/>
        <EditText android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:background="@null"
                  android:layout_marginLeft="66dp"
                  android:id="@+id/et_password"
                  android:hint="@string/input_psw_tips"
                  android:textStyle="bold"
                  android:inputType="text"
                  android:textCursorDrawable="@drawable/bg_edittext"
                  android:textSize="16sp"
                  android:textColorHint="@color/color_A1A1A1"
                  android:textColor="@color/color_282828"
                  android:layout_toRightOf="@+id/tv_verificationCode"/>
      </RelativeLayout>
      <ImageView android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="15dp"
                 android:background="@color/color_A1A1A1"/>
    </LinearLayout>
    <RelativeLayout android:layout_below="@+id/ll_password"
                    android:id="@+id/rl_login_tips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
      <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="6dp"
                android:id="@+id/tv_code_login_register"
                android:layout_alignParentLeft="true"
                android:textColor="@color/color_1A6ED2"
                android:text="@string/login_register_tips"/>
      <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:id="@+id/tv_forget_psw"
                android:layout_alignParentRight="true"
                android:layout_marginTop="6dp"
                android:textColor="@color/color_1A6ED2"
                android:text="@string/forget_psw"/>
    </RelativeLayout>
    <com.zhuorui.commonwidget.StateButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="29dp"
            android:layout_marginRight="29dp"
            android:layout_marginTop="20dp"
            android:id="@+id/tv_btn_login"
            android:layout_below="@+id/rl_login_tips"
            android:textSize="23sp"
            android:padding="0dp"
            android:minHeight="0dp"
            android:gravity="center"
            android:text="@string/login"
            android:enabled="false"
            app:radius="3dp"
            android:textColor="@color/color_FFFFFFFF"
            app:normalBackgroundColor="@color/color_1A6ED2"
            app:unableBackgroundColor="@color/color_8DB9E4"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:layout_alignParentBottom="true"
                  android:layout_marginBottom="22dp"
                  android:orientation="horizontal">
      <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textColor="@color/color_000000"
                android:textSize="11sp"
                android:text="@string/login_tips1"/>
      <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textSize="11sp"
                android:textColor="@color/color_1A6ED2"
                android:text="@string/login_tips2"/>
      <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textSize="11sp"
                android:textColor="@color/color_000000"
                android:text="@string/login_tips3"/>
      <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textSize="11sp"
                android:textColor="@color/color_1A6ED2"
                android:text="@string/login_tips4"/>
    </LinearLayout>
  </RelativeLayout>
</layout>
